# CRREE_Platform-

./: .dockerignore  Dockerfile  README.md  README.md.detailed  __init__.py  check_space_status.py  client.py  db.py  eval_history.db  graders.py  inference.py  main.py  manual_push.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  reward.py  tasks.py  utils.py  verify_production.py
openenv_crree_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server/: Dockerfile  __init__.py  app.py  crree_env_environment.py
tests/: test_advanced.py  test_env.py  test_final.py
